[package]
name = "postman_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.126.0"
serde_json = "^1.0.79"
serde = "1.0.136"
deno_console = "0.44.0"
#hyper = { version = "0.14.18", features = ["client", "http1", "http2", "tcp", "runtime"] }
tokio = { version = "1", features = ["full"] }
unicode-segmentation = "1.9.0"
failure = "0.1.8"
reqwest = {version = "0.11.10", features = [  "blocking", "cookies", "json","multipart"]}

[dev-dependencies]
wiremock = "0.5.11"

[[bin]]
name = "postman_runner"

[lib]
