[package]
name = "postman_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
deno_core = "0.126.0"
serde_json = "^1.0.79"
serde = "1.0.136"
tokio = { version = "1", features = ["full"] }
unicode-segmentation = "1.9.0"
failure = "0.1.8"
ureq = { git = "https://github.com/shautvast/ureq",branch = "main" }
quick-js = {version = "0.4.1", features = ["log", "chrono"]}
lazy_static = "1.4.0"
log = "0.4"
simple-logging = "2.0"

[dev-dependencies]
wiremock = "0.5.11"

[[bin]]
name = "postman_runner"

[lib]
